# NFileSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Cmake/: DetectPlatform.cmake  Shared.cmake
Source/Private/: VirtualFileManager.cpp  VirtualPath.cpp
Source/Public/: VirtualFileManager.h  VirtualPath.h
